# bio-seq-embl

./: .gitignore  bio-seq-embl.cabal
src/: test.hs
src/Bio/Seq/: EMBL.hs
src/Bio/Seq/EMBL/: Parser.hs  Render.hs  Types.hs
src/Bio/Seq/EMBL/Parser/: Internal.hs
