name:                bio-seq-embl
version:             0.1.0.2
synopsis:            Parser for EMBL sequence format
description:         
license:             BSD3
license-file:        LICENSE
author:              Boyun Tang
maintainer:          tangboyun@hotmail.com
copyright:           Boyun Tang
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     
                       Bio.Seq.EMBL
                       
  other-modules:       
                       Bio.Seq.EMBL.Types
                       Bio.Seq.EMBL.Parser.Internal
                       Bio.Seq.EMBL.Parser

  build-depends:       base,
                       attoparsec,
                       bytestring >= 0.10.0.2,
                       split,
                       time,
                       old-locale

  hs-source-dirs:      src
  ghc-options:         -Wall -fsimpl-tick-factor=60000
